Archive2/1a/883875a6a1d199/output
main.cpp: In function 'int compare(char*)':
main.cpp:38:6: error: expected '(' before 'each'
  for each (char bufferByte in buffer) //For each byte in the buffer...
      ^
main.cpp:38:12: error: expected primary-expression before 'char'
  for each (char bufferByte in buffer) //For each byte in the buffer...
            ^
main.cpp:38:37: error: 'each' was not declared in this scope
  for each (char bufferByte in buffer) //For each byte in the buffer...
                                     ^
main.cpp:53:54: error: expected ')' before ';' token
  cout << "The size of the vector is " << bytes.size(); 
                                                      ^
main.cpp: In function 'int main()':
main.cpp:61:70: error: 'passes' was not declared in this scope
  cout << "Number of passes on said file: " << passes(filepath, 102400); //Get the number of passes.
                                                                      ^
